resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;


/*@import 'normalize.css'; Tailwind a déjà le sien */
@import 'Configuration/variables.css';
@import 'Configuration/typography.css';
/* Auditor */
@import 'Auditor/base.css';
@import 'Auditor/header.css';
/* Animator */
@import 'Animator/base.css';

.gradient-auditor {
    background-color: linear-gradient(125deg, #FF67FF 10%, #FFE27C 85%);
}

